--- a/aboutus.html
+++ b/aboutus.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	
 		<title>About Us</title>
 		<link rel="stylesheet" href="css/style.css">
 		
 	</head>
 	<body class="aboutus">
+	<div id="header" class="section">
+		<img alt="" class="img-circle" src="">
+		<p>SchoolMystress</p>
+	</div>
 		<div class="section">
 			<h1><span>About Us</span></h1>
 			<p>
@@ -13,5 +18,31 @@
 				....
 				....
 			</p>
+			
+			<p class="quote">some known thing..</p>
+		</div>
+		
+		<!--contacts-->
+		<div class="section" id="contact">
+			<h1><span>Follow Us</span></h1>
+			<div class="logos">
+				
+				<a href="https://facebook.com" target="_blank">
+					<img alt="Facebook" src="images/facebook.png">
+				</a>
+				<a href="https://twitter.com" target="_blank" >
+					<img alt="Twitter" src="images/twitter.png">
+				</a>
+			</div>
+			
+		</div>
 	</body>
+	<footer>
+		<div class="copyright">
+	
+		Copyright &copy; 2018 comp334-project.birzeit.edu
+		All rights reserved.
+		</div>
+	
+	</footer>
 </html>
