--- a/contact-us.html
+++ b/contact-us.html
@@ -10,11 +10,19 @@
 		<div class="section">
 			<h1><span>Contact Us</span></h1>
 			<form>
-				<input name="name" type="text"/><br/>
-				<input name="email" type="email"/><br/>
+				<input name="name" type="text" required/><br/>
+				<input name="email" type="email" required/><br/>
 				<textarea name="message"></textarea><br/>
 				<button type="submit" value="SEND">Send</button>
 			</form>
 		</div>
 	</body>
+	<footer>
+		<div class="copyright">
+	
+		Copyright &copy; 2018 comp334-project.birzeit.edu
+		All rights reserved.
+		</div>
+	
+	</footer>
 </html>
