--- a/project-html.html
+++ b/project-html.html
@@ -15,11 +15,11 @@
 		
 		<nav style="overflow:auto">
 <ul>
-  <li><a href="#About">About |</a></li>
+  <li><a href="aboutus.html">About |</a></li>
   <li><a href="#Admissions">Admissions |</a></li>
   <li><a href="#Tuition & Feeds ">Tuition & Feeds |</a></li>
   <li><a href="#Apply">Apply |</a></li>
-    <li><a href="#Contact">Contact US |</a></li>
+    <li><a href="contact-us.html">Contact US |</a></li>
 </ul>
 </nav>	
 	<nav style="color: black" class="logins">
@@ -114,7 +114,11 @@
 		<a href="www.google.com">See More..</a>
 		<hr>
 	<footer>
-		Copyright &copy; comp334-project.birzeit.edu
+		<div class="copyright">
+	
+		Copyright &copy; 2018 comp334-project.birzeit.edu
+		All rights reserved.
+		</div>
 	
 	</footer>
 </html>
