--- a/project-html.html
+++ b/project-html.html
@@ -8,8 +8,9 @@
 
 </head>
 	<body>
-	<div>
-		<button type="button" class="btn login-btn dropdown-toggle">Log In</button>
+	<div >
+			
+			<a id="links" href="school-login.html" target="_blank">login</a>
 	</div>
 		<h1 title="I'm Your SchoolMistress">Welcome to Your SchoolMistress..</h1>
 		
@@ -23,8 +24,7 @@
 </ul>
 </nav>	
 	<nav style="color: black" class="logins">
-			
-			<a href="login.html">login</a>
+		
 		</nav>
 		<a href="" target="_blank" title="my School WebSite"><img class="img-banner" src="images\learning2.jpg" alt="ourSchool.ps"></a>
 		<hr>
