--- a/applyPage.html
+++ b/applyPage.html
@@ -6,33 +6,37 @@
     <link rel="stylesheet" href="css/applyCSS.css">
 </head>
 <body>
+<header>
+    <h1 style="alignment-baseline: center;margin: 0">Header</h1>
+</header>
 <div id="content">
-    <div class="a">
-    <div id="about">
-        <h1>Your SchoolMistress Online Application</h1>
-        <p>Start your application here, and one of our Enrollment Advisers will be in touch to support you through the process.</p>
-        <p>Apply now to secure your seat</p>
-    </div>
-    </div>
-    <div class="a">
-    <div id="form_layout">
-        <p>Already have a profile? <a href="school-login.html">Log In</a></p>
-        <form>
-            <h3>Student Information</h3>
-            <input placeholder="First Name" type="text">
-            <input placeholder="Last Name" type="text">
-            <input placeholder="Email Address" type="text">
-            <input placeholder="Phone Number" type="text">
-            <input placeholder="Password" type="password">
-            <input placeholder="Re-Enter Password" type="password">
-            <textarea placeholder="Write in brief about your interests"></textarea>
-            <h3>Parent Information</h3>
-            <input placeholder="Parent Email Address" type="text">
-            <input placeholder="Parent Phone Number" type="text">
-            <button>Apply</button>
-        </form>
-    </div>
-    </div>
+    <section>
+        <div id="about">
+            <h1>Your SchoolMistress Online Application</h1>
+            <p>Start your application here, and one of our Enrollment Advisers will be in touch to support you through the process.</p>
+            <p>Apply now to secure your seat</p>
+        </div>
+        <div id="form_layout">
+            <p>Already have a profile? <a href="school-login.html">Log In</a></p>
+            <form>
+                <h3>Student Information</h3>
+                <input placeholder="First Name" type="text">
+                <input placeholder="Last Name" type="text">
+                <input placeholder="Email Address" type="text">
+                <input placeholder="Phone Number" type="text">
+                <input placeholder="Password" type="password">
+                <input placeholder="Re-Enter Password" type="password">
+                <textarea placeholder="Write in brief about your interests"></textarea>
+                <h3>Parent Information</h3>
+                <input placeholder="Parent Email Address" type="text">
+                <input placeholder="Parent Phone Number" type="text">
+                <button>Apply</button>
+            </form>
+        </div>
+    </section>
 </div>
+<header>
+    <h1 style="alignment-baseline: center;margin: 0">Footer</h1>
+</header>
 </body>
 </html>
