Half-Done With Apply Page

--- a/project-html.html
+++ b/project-html.html
@@ -19,7 +19,7 @@
   <li><a href="aboutus.html">About |</a></li>
   <li><a href="#Admissions">Admissions |</a></li>
   <li><a href="#Tuition & Feeds ">Tuition & Feeds |</a></li>
-  <li><a href="#Apply">Apply |</a></li>
+  <li><a href="applyPage.html">Apply |</a></li>
     <li><a href="contact-us.html">Contact US |</a></li>
 </ul>
 </nav>	
