Working on the header and footer

--- a/applyPage.html
+++ b/applyPage.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <title>Apply</title>
     <link rel="stylesheet" href="css/applyCSS.css">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
 <header>
-    <h1 style="alignment-baseline: center;margin: 0">Header</h1>
+    <a href="project-html.html"><img src="images/school_logo2.png"/></a>
+    <a href="school-login.html">Log In</a>
+    <nav>
+        <a class="nav_bar">About</a>
+        <a class="nav_bar">Admissions</a>
+        <a class="nav_bar" href="tuitionFeesPage.html">Tuition & Feeds</a>
+        <a class="nav_bar" href="applyPage.html">Apply</a>
+        <a href="contact-us.html">Contact US</a>
+    </nav>
 </header>
 <div id="content">
     <section>
