Done with header and footer. Now working on apply page javascript

--- a/applyPage.html
+++ b/applyPage.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Apply</title>
-    <link rel="stylesheet" href="css/applyCSS.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/applyCSS.css">
 </head>
 <body>
 <header>
     <a href="project-html.html"><img src="images/school_logo2.png"/></a>
+    <h1>Your SchoolMisters</h1>
     <a href="school-login.html">Log In</a>
     <nav>
         <a class="nav_bar">About</a>
@@ -44,8 +46,14 @@
         </div>
     </section>
 </div>
-<header>
-    <h1 style="alignment-baseline: center;margin: 0">Footer</h1>
-</header>
+<footer>
+    <h1>Developers</h1>
+    <ul>
+        <li><p>Sondos</p></li>
+        <li><p>Ashjan</p></li>
+        <li><p>Kahala</p></li>
+    </ul>
+    <p>Copyright &copy; 2018 comp334-project.birzeit.edu All rights reserved.</p>
+</footer>
 </body>
 </html>
