--- a/tuitionFeesPage.html
+++ b/tuitionFeesPage.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Tuition and Fees</title>
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/tuitionFeesPageCSS.css">
 </head>
 <body>
 <header>
-    <h1>Header</h1>
+    <a href="project-html.html"><img src="images/school_logo2.png"/></a>
+    <h1>Your SchoolMisters</h1>
+    <a href="school-login.html">Log In</a>
+    <nav>
+        <a class="nav_bar">About</a>
+        <a class="nav_bar">Admissions</a>
+        <a class="nav_bar" href="tuitionFeesPage.html">Tuition & Feeds</a>
+        <a class="nav_bar" href="applyPage.html">Apply</a>
+        <a href="contact-us.html">Contact US</a>
+    </nav>
 </header>
 <div id="content">
     <h1>Tuition and Fees</h1>
@@ -28,7 +39,13 @@
     </ul>
 </div>
 <footer>
-    <h1>Footer</h1>
+    <h1>Developers</h1>
+    <ul>
+        <li><p>Sondos</p></li>
+        <li><p>Ashjan</p></li>
+        <li><p>Kahala</p></li>
+    </ul>
+    <p>Copyright &copy; 2018 comp334-project.birzeit.edu All rights reserved.</p>
 </footer>
 </body>
 </html>
